# Graduation-Project-LLM

./: .gitignore  README.md  pyproject.toml
YazımDenetim/: .csv  listeler.py  streamlit_app.py  turkish_nlp.py  turkish_yaz.py
YazımDenetim/faiss_index/: index.faiss  index.pkl
