[tool.poetry]
name = "Graduation-Project"
version = "0.1.0"
description = ""
authors = ["Yusuf Baykaloğlu <yusuff.baykaloglu@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
streamlit = "^1.39.0"
langchain-community = "^0.3.2"
langchain = "^0.3.3"
chromadb = "^0.5.15"
protobuf = "3.20.x"
nltk = "^3.9.1"
bs4 = "^0.0.2"
pypdf2 = "^3.0.1"
langchain-openai = "^0.2.2"
streamlit-lottie = "^0.0.5"
langchain-experimental = "^0.3.2"
transformers = "^4.45.2"
huggingface-hub = "^0.25.2"
torch = "^2.4.1"
torchvision = "^0.19.1"
torchaudio = "^2.4.1"
accelerate = ">=0.26.0"
bitsandbytes = "^0.44.1"
pypdf = "^5.0.1"
image = "^1.5.33"
faiss-cpu = "^1.9.0"
selenium = "^4.25.0"
unstructured = "^0.16.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"